sonarqube/09-sonarqube-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: sonarqube
  labels:
    app: sonarqube
    type: service
spec:
  selector:
    app: sonarqube
    type: pod
  ports:
    - port: 9000
      name: http
